[tool.poetry]
name = "data-science-library"
version = "0.1.0"
description = ""
authors = ["Naimesh"]
readme = "README.md"
packages = [
    { include = "data_science_library" },
]

[tool.poetry.dependencies]
python = "^3.11"
lightgbm = "^4.1.0"
xgboost = "^2.0.2"
pydantic = "^2.5.1"
pytest = "^7.4.3"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
optuna = "^3.4.0"
dynaconf = "^3.2.4"
black = "^23.11.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "data_science_library.src.main:main"


